# claude-code-proxy

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  build-and-run.bat  build.bat  model-config.sample.json
docs/superpowers/plans/: 2026-04-11-proxy-v2-rewrite.md  2026-04-11-session-intelligence-contract-hardening.md  2026-04-12-dashboard-restructure.md  2026-04-12-wire-up-features.md
docs/superpowers/specs/: 2026-04-10-settings-editor-redesign.md  2026-04-11-sessions-requests-correlation-explanations-timeline-design.md  2026-04-12-dashboard-restructure-design.md
src/: analyzer.rs  correlation.rs  correlation_engine.rs  dashboard.html  dashboard.rs  explain.rs  explainer.rs  local_context.rs  main.rs  model_profile.rs  proxy.rs  session_admin.rs  settings_admin.rs  stats.rs  store.rs  types.rs
src/dashboard/: app.js  shell.html  styles.css  utils.js
src/dashboard/components/: charts.js  websocket.js
src/dashboard/tabs/: anomalies.js  conformance.js  overview.js  requests.js  sessions.js
