[package]
name = "claude-proxy"
version = "1.0.0"
edition = "2021"
description = "Ultra-fast API logging proxy with real-time dashboard for Claude Code"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1", "http2"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
bytes = "1"
futures-util = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"
open = "5"
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
